Adicionado gravação no banco de dados sobre os mangas que será processado, para que futuramente em um novo reprocessamento seja recuparado as paginas. Adicionado salvamento dos eventos de log. Adicionado migrations ao banco de dados. Corrigido o bat de execução. Refatorado as view e css, onde foi adicionado na devida pasta que é no resources.